--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,37 @@
 {
-    "name": "laravel/homestead",
-    "description": "A virtual machine for web artisans.",
-    "require": {
-        "php": ">=5.5.9",
-        "symfony/console": "~2.3|~3.0",
-        "symfony/process": "~2.3|~3.0"
-    },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Taylor Otwell",
-            "email": "taylorotwell@gmail.com"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "Laravel\\Homestead\\": "src/"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "4.0-dev"
-        }
-    },
-    "bin": [
-        "homestead"
-    ]
+  "name": "ytake/gardening",
+  "description": "Vagrant(centos7) for web developers.",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Yuuki Takezawa",
+      "email": "yuuki.takezawa@comnect.jp.net"
+    }
+  ],
+  "keywords": [
+    "vagrant",
+    "develop",
+    "couchbase",
+    "database",
+    "elasticsearch",
+    "centos",
+    "homestead"
+  ],
+  "require": {
+    "php": ">=5.5.9",
+    "symfony/console": "~2.3|~3.0",
+    "symfony/yaml": "~2.3|~3.0"
+  },
+  "require-dev":{
+    "symfony/var-dumper": "~3.0",
+    "phpunit/phpunit": "~4.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Ytake\\Gardening\\": "src/"
+    }
+  },
+  "bin": [
+    "gardening"
+  ]
 }
